--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
       <!-- Latest compiled and minified CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
       
-      <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
-      <link rel="stylesheet" href="/style/index.css">
+      <link rel="stylesheet" href="/style/index.min.css">
   	</head>
   	<body>
       <div id="container"></div> 
-      <script src="/bundle.js"></script>
+      <script async src="/bundle.js"></script>
   	</body>
 </html>
