update webpack, and react to latest version

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,9 @@
       <!-- Latest compiled and minified CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
       
-      <link rel="stylesheet" href="/style/index.min.css">
+      <link rel="stylesheet" href="../style/index.min.css">
   	</head>
   	<body>
       <div id="container"></div> 
-      <script async src="/bundle.js"></script>
   	</body>
 </html>
