--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,12 @@
     	<meta charset="UTF-8">
     	<meta name="description" content="Hearthstone Pack Simulator">
     	<title>Hearthstone Pack Simulator</title>
-      <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
       <!-- Latest compiled and minified CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
       
-      <link rel="stylesheet" href="../style/index.min.css">
   	</head>
   	<body>
-      <div id="container"></div> 
+      <div id="container"></div>
   	</body>
 </html>
